# cepx-data

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Makefile  NOTICE  README.md  pyproject.toml  release-please-config.json
.github/workflows/: ci.yml  release-please.yml
src/cepx_data/: __init__.py
tests/unit/: test_loader.py  test_package.py
tools/: build_cep_db.py  coverage.py  fetch_cepaberto.py  load_cepaberto.py
